<resources>
    <string name="app_name">Car</string>

    <!--Login Strings -->
    <string name="txt_tnc"><u>terms &amp; conditions</u></string>
    <string name="btn_enter_otp">Get OTP</string>
    <string name="txt_otp_confirm">OTP has been sent to mobile number</string>
    <string name="txt_otp_confirm1">To change mobile number</string>
    <string name="txt_change_mob">click here</string>
    <string name="txt_number_code">+91</string>
    <string name="txt_otp_q">Did not Receive OTP?</string>
    <string name="txt_resend_otp"><u>Resend OTP</u></string>
    <string name="btn_proceed">Proceed</string>
    <string name="txt_enter_new_mob">Enter New</string>
    <string name="txt_mob_num">Mobile Number</string>
    <string name="txt_register"><u>Register Yourself</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>