<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/loginbg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcome_txt"
            android:layout_width="250dp"
            android:layout_height="26dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/welcomeaboardtxt"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="0.079" />

        <TextView
            android:id="@+id/mob_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/mobtxt"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_txt" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/etnumberbg"
            android:ems="10"
            android:inputType="phone"
            android:maxLength="10"
            android:hint="Enter Phone number"
            android:textColor="#9733EE"
            android:textCursorDrawable="@color/app_colour"
            app:flow_horizontalGap="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toEndOf="@+id/number_dropDown"
            app:layout_constraintTop_toBottomOf="@+id/mob_txt"
            app:layout_constraintVertical_bias="0.144"
            />

        <CheckBox
            android:id="@+id/cbTnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:buttonTint="@color/app_colour"
            android:text="Accept"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.149"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhone"
            app:layout_constraintVertical_bias="0.152" />

        <TextView
            android:id="@+id/txtTnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/txt_tnc"
            android:textColor="@color/app_colour"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/cbTnC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cbTnC"
            app:layout_constraintTop_toTopOf="@+id/cbTnC" />


            <Button
                android:id="@+id/btnOtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/btnotp"
                android:text="@string/btn_enter_otp"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTnC" />


            <View
                android:id="@+id/number_dropDown"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_marginStart="70dp"
                android:background="@drawable/numberdropwdown"
                app:layout_constraintBottom_toBottomOf="@+id/etPhone"
                app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="15dp"
            android:layout_height="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/dropdowntriangle"
            app:layout_constraintBottom_toTopOf="@+id/cbTnC"
            app:layout_constraintEnd_toStartOf="@+id/etPhone"
            app:layout_constraintHorizontal_bias="0.67"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mob_txt"
            app:layout_constraintVertical_bias="0.535" />

        <TextView
            android:id="@+id/txt_number_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txt_number_code"
            android:textColor="#BDBDBD"
            android:textSize="13sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTnC"
            app:layout_constraintEnd_toStartOf="@+id/etPhone"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/mob_txt"
            app:layout_constraintVertical_bias="0.53" />

        <TextView
            android:id="@+id/txt_enter_new_mo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:layout_marginTop="32dp"
            android:text="@string/txt_enter_new_mob"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_txt" />

        <TextView
            android:id="@+id/txt_enter_new_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/txt_mob_num"
            android:textColor="@color/app_colour"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/txt_enter_new_mo"
            app:layout_constraintStart_toEndOf="@+id/txt_enter_new_mo"
            app:layout_constraintTop_toTopOf="@+id/txt_enter_new_mo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>